RESOLVED FIXED180265
Gigacage should not be enabled for ARM64_32
https://bugs.webkit.org/show_bug.cgi?id=180265
Summary Gigacage should not be enabled for ARM64_32
Michael Saboff
Reported 2017-12-01 11:36:00 PST
Attachments
Patch (2.60 KB, patch)
2017-12-01 11:53 PST, Michael Saboff
no flags
Michael Saboff
Comment 1 2017-12-01 11:53:34 PST
WebKit Commit Bot
Comment 2 2017-12-01 14:12:04 PST
Comment on attachment 328130 [details] Patch Clearing flags on attachment: 328130 Committed r225413: <https://trac.webkit.org/changeset/225413>
WebKit Commit Bot
Comment 3 2017-12-01 14:12:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.