Gigacage should not be enabled for ARM64_32 https://bugs.webkit.org/show_bug.cgi?id=180265

Reviewed by Saam Barati.

Disabled Gigacage for ARM64_32.
In the process, restructured Gigacage::shouldBeEnabled() with GIGACAGE_ENABLED set
to 0 to avoid a dead code compiler warning.

* bmalloc/Gigacage.cpp:
(Gigacage::shouldBeEnabled):
* bmalloc/Gigacage.h:


Canonical link: https://commits.webkit.org/196262@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225413 268f45cc-cd09-0410-ab3c-d52691b4dbfc