Source/bmalloc/bmalloc/Gigacage.cpp
@@ -244,17 +244,14 @@ bool isDisablingPrimitiveGigacageDisabled()
 
 bool shouldBeEnabled()
 {
-    static std::once_flag onceFlag;
     static bool cached = false;
+
+#if GIGACAGE_ENABLED
+    static std::once_flag onceFlag;
     std::call_once(
         onceFlag,
         [] {
-#if BCPU(ARM64)
-            // FIXME: Make WasmBench run with gigacage on iOS and re-enable on ARM64:
-            // https://bugs.webkit.org/show_bug.cgi?id=178557
-            return;
-#endif
-            bool result = GIGACAGE_ENABLED && !PerProcess<Environment>::get()->isDebugHeapEnabled();
+            bool result = !PerProcess<Environment>::get()->isDebugHeapEnabled();
             if (!result)
                 return;
             
@@ -268,6 +265,7 @@ bool shouldBeEnabled()
             
             cached = true;
         });
+#endif // GIGACAGE_ENABLED
     
     return cached;
 }
